--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.2",
   "description": "React version of Argon Design System by Creative Tim",
   "main": "index.js",
-  "homepage": "index.js",
+  "homepage": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mjrobillard/SpanishSilver2.git"
