--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "spanish-silver-2-react",
   "version": "1.1.2",
-  "description": "React version of Argon Design System by Creative Tim",
-  "main": "index.js",
-  "homepage": "src/index.js",
+  "description": "React version of Argon Design System by Matt",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mjrobillard/SpanishSilver2.git"
