--- a/package.json
+++ b/package.json
@@ -48,11 +48,14 @@
     "bootstrap": "4.6.2",
     "classnames": "2.3.2",
     "headroom.js": "0.12.0",
+    "leaflet": "^1.9.4",
     "moment": "2.29.4",
     "nouislider": "15.4.0",
-    "react": "18.2.0",
+    "react": ">=16.0.0",
     "react-datetime": "3.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": ">=16.0.0",
+    "react-google-maps": "^9.4.5",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "6.11.1",
     "react-scripts": "5.0.1",
     "reactstrap": "8.10.0",
