--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "kit",
     "react-kit",
     "SpanishSilver2",
-    "SpanishSilver2-react", 
+    "SpanishSilver2-react",
     "design-system-react"
   ],
   "author": "Creative ",
@@ -52,6 +52,7 @@
     "moment": "2.29.4",
     "nouislider": "15.4.0",
     "react": ">=16.0.0",
+    "react-bootstrap": "^2.10.2",
     "react-datetime": "3.2.0",
     "react-dom": ">=16.0.0",
     "react-google-maps": "^9.4.5",
