--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
+    "@material-tailwind/react": "^2.1.9",
+    "antd": "^5.20.2",
     "bootstrap": "4.6.2",
     "classnames": "2.3.2",
     "headroom.js": "0.12.0",
@@ -69,6 +72,7 @@
   "devDependencies": {
     "@types/markerclustererplus": "2.1.33",
     "@types/react": "18.2.6",
+    "ajv": "^7.2.4",
     "eslint-plugin-flowtype": "8.0.3",
     "jquery": "3.7.0",
     "typescript": "5.0.4"
